src/test/deca/syntax/valid/sansObjet/signed.deca
{
    int b = -15449464;
}
