src/test/deca/syntax/invalid/sansObjet/NoSemi.deca
{
    int a = 2020
}